// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions has the expected html structure 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Transactions
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                  </a>
                </div>
                <a
                  class="back"
                >
                  <i
                    class="material-icons"
                  >
                    arrow_back
                  </i>
                </a>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
                <a
                  class="sign-out"
                >
                  <i
                    class="material-icons"
                  >
                    exit_to_app
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
    <!---->
    <li-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      devmode="true"
      transaction="[object Object]"
    />
    <li-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      devmode="true"
      transaction="[object Object]"
    />
    <li-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      devmode="true"
      transaction="[object Object]"
    />
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageTransactions should filter the transactions 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Transactions
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                  </a>
                </div>
                <a
                  class="back"
                >
                  <i
                    class="material-icons"
                  >
                    arrow_back
                  </i>
                </a>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
                <a
                  class="sign-out"
                >
                  <i
                    class="material-icons"
                  >
                    exit_to_app
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <div
      class="tm-modal-search"
    >
      <div
        class="tm-modal-search-container"
      >
        <div
          class="tm-form-group"
        >
          <!---->
          <!---->
          <div
            class="tm-form-group__field"
          >
            <div
              class="tm-modal-search-field"
            >
              <input
                class="mousetrap tm-field"
                id="search-input"
                placeholder="Search..."
                type="text"
              />
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    close
                  </i>
                  <!---->
                  <!---->
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <li-transaction
      address="tb1d4u5zerywfjhxuc9nudvw"
      devmode="true"
      transaction="[object Object]"
    />
  </main>
</div>
`;
